2015-05-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: Use libxml2 if available.

2015-05-24  Richard Frith-Macdonald <rfm@gnu.org>

	* GSString.m:
	* NSDebug.m:
	* NSZone.m:
	Minor optimisations and tidyups

2015-05-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Fix failure to check free when done flag before
	freeing memory.

2015-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m:
	* Source/GSString.m:
	Some optimisation.  Fix -hasPrefix: and -hasSuffix: to use literal
	search as on OSX.

2015-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/install.texi:
	* ANNOUNCE:
	* INSTALL:
	* NEWS:
	Final updates for 1.24.8 release

2015-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Tidy compiler and preprocessor  detection and use
	warning for potentially broken compiler selection.
	* configure: regenerate

2015-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Version:
	* Documentation/news.texi:
	* Documentation/ReleaseNotes.gsdoc:
	Update in preparation for release
	* Source/Makefile.postamble:
	* Makefile.postamble:
	* GNUmakefile:
	Apply Yavor Doganov's patch to avoid re-run of configure when we do
	multiple 'make distclean' invocations (bug #29730).

2015-05-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZones/NSTimeZones.tar: updated

2015-05-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m:
	Fix for 64bit systems using TinyString objects ... missing
	implementations for common methods were making performance dire.

2015-05-02 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSSet.m
	* Source/NSCountedSet.m
	* Source/NSSet.m:
	Implement a private method -_countForObject: that enables to correctly
	check equality of NSSet and NSCountedSet (behaviour verified to match
	OS X). Fixes bug #43915.
	* Tests/base/NSCountedSet/equality.m: Test cases for equality behaviour.

2015-04-20  Richard Frith-Macdonald <rfm@gnu.org>
